--- a/.README.md.hbs
+++ b/.README.md.hbs
@@ -4,26 +4,29 @@
 [![Build Status][my_travis_badge_url]][my_travis_url]
 [![Code Climate][my_codeclimate_badge_url]][my_codeclimate_url]
 [![Code Coverage][my_codeclimate_coverage_badge_url]][my_codeclimate_url]
-[![npm version][my_npm_budge_url]][my_npm_url]
+[![Dependency Status][my_gemnasium_badge_url]][my_gemnasium_url]
+[![npm Version][my_npm_budge_url]][my_npm_url]
+
 
 {{pkg.description}}
-
-
-Usage
-----
-
-### Measure coverage.
-
-```javascript
-{{{read 'docs/examples/example-run-tasks.js'}}}
-```
 
 
 Installation
 ----
 
+```bash
+$ npm install {{pkg.name}} --save-dev
+```
+
+Usage
+----
+
+### Run Tasks
+
+`.runTasks(taskName, tasks, exitWhenDone)`
+
 ```javascript
-$ npm install {{pkg.name}} --save
+{{{read 'docs/examples/example-run-tasks.js'}}}
 ```
 
 
@@ -47,7 +50,8 @@ Links
 [my_codeclimate_url]: http://codeclimate.com/github/ape-repo/{{pkg.name}}
 [my_codeclimate_badge_url]: http://img.shields.io/codeclimate/github/ape-repo/{{pkg.name}}.svg?style=flat
 [my_codeclimate_coverage_badge_url]: http://img.shields.io/codeclimate/coverage/github/ape-repo/{{pkg.name}}.svg?style=flat
-[my_coverage_url]: http://ape-repo.github.io/{{pkg.name}}/coverage/lcov-report
+[my_gemnasium_url]: https://gemnasium.com/ape-repo/{{pkg.name}}
+[my_gemnasium_badge_url]: https://gemnasium.com/ape-repo/{{pkg.name}}.svg
 [my_npm_url]: http://www.npmjs.org/package/{{pkg.name}}
 [my_npm_budge_url]: http://img.shields.io/npm/v/{{pkg.name}}.svg?style=flat
 
